# task-buddy

./: .gitignore  Pipfile  README.md  pyproject.toml
src/: __init__.py  lib.py  setup_github.py  setup_postgres.py  setup_skills.py
src/store/mcp-tools/: github.json  postgres.json
src/store/skills/: REASONING_APPROACH.md  new-issue.md  pg-ask.md  pr-recap.md  squash-this.md
